--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,11 +1,27 @@
+/* // <weight>: Use a value from 100 to 900
+// <uniquifier>: Use a unique and descriptive class name */
+@import url('https://fonts.googleapis.com/css2?family=Smooch+Sans:wght@100..900&display=swap');
+
+.smooch-sans-cool {
+  font-family: "Smooch Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 900;
+  font-style: normal;
+}
+
 body{
-    font-family: Arial, sans-serif;
+    font-family: "Smooch Sans", Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
 }
 
-a{
+a {
+    text-decoration: none;
+    color: #000;
+}
+
+nav a{
     text-decoration: none;
     color: #fff;
     padding: 1em 1em;
@@ -13,7 +29,7 @@ a{
     font-size: 2em;
 }
 
-a:hover {
+nav a:hover {
     background-color: #b29784;
     /*6b7460*/
     font-size: 2.05em;
@@ -28,7 +44,8 @@ a:hover {
     text-align: center;
     height: 6.5em;
     width: 100%;
-    /* position: fixed; */
+    position: relative;
+    text-transform: capitalize;
 }
 
 .hero-image{
@@ -45,9 +62,9 @@ a:hover {
     left: 35%;
     transform: translate(-50%, -50%);
     color: #6b7460;
-    font-size: 307%;
+    font-size: 400%;
     font-weight: bold;
-    text-shadow: 6px 0px 4px rgba(0, 0, 0, 0.7);
+    text-shadow: 2px 0px 2px rgba(0, 0, 0, 0.7);
     text-align: left;
 
 }
@@ -65,8 +82,53 @@ a:hover {
 }
 
 .main-content h2 {
-    font-size: 300%;
+    font-size: 290%;
     position: relative;
     text-align: center;
     padding-top: 12.5%;
+}
+
+.main-content p {
+    font-size: 250%;
+    padding-top: 10%;
+    width: 50%;
+    text-align: left;
+    position: relative;
+    display: block;
+    left: 10%;
+}
+
+button {
+    border-radius: 300px;
+    height: 10%;
+    padding-left: 1%;
+    padding-right: 1%;
+    margin: 10px 0;
+    overflow-wrap: break-word;
+    size: 50%;
+    text-align: center;
+    display: inline-block;
+    font-size: 150%;
+}
+
+button:hover{
+    cursor: pointer;
+    background: grey;
+}
+
+.buttonStuff {
+    width: fit-content;
+    display: inline-block;
+    margin-left: 30%;
+    margin-top: 2.5%;
+}
+
+
+.boxes {
+    background-color: #6b7460;
+}
+
+footer {
+    background-color: #6b7460;
+    font-size: large;
 }
