--- a/CSS/style.css
+++ b/CSS/style.css
@@ -40,13 +40,13 @@ nav a{
     color: #fff;
     padding: 1em 1em;
     display: inline-block;
-    font-size: 2em;
+    font-size: 1.6vw;
 }
 
 nav a:hover {
     background-color: #b29784;
     /*6b7460*/
-    font-size: 2.05em;
+    font-size: 2.0009em;
     transition: all 0.1s ease;
 }
 
@@ -56,7 +56,7 @@ nav a:hover {
     color: #fff;
     padding: 10px 0;
     text-align: center;
-    height: 6.5em;
+    height: 11vh;
     width: 100%;
     position: absolute;
     text-transform: capitalize;
@@ -149,6 +149,21 @@ nav a:hover {
     margin-top: 2.5%;
 }
 
+.buttonStuffNav {
+    width: 10vw;
+    display: inline-flex;
+    margin-right: 0 auto;
+    text-align: center;
+    text-transform: capitalize;
+    font-size: 0.809vw;
+    max-height: fit-content;
+}
+
+.menu-content {
+    width: 80vw;
+    margin-left: 0 auto;
+    display: inline-flex;
+}
 
 .boxes {
     background-color: #6b7460;
