--- a/CSS/style.css
+++ b/CSS/style.css
@@ -118,7 +118,7 @@ nav a:hover {
 .main-content {
   padding: 40px 5%;
   background-color: #f4f4f4;
-  max-width: 1200px; 
+  max-width: 100vw; 
 }
 
 .main-content h2 {
